<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="121dp"
        android:text="" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:paddingStart="30dp"
        android:text="@string/help_profile"
        android:textAlignment="gravity"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="381dp"
        android:layout_height="75dp"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        android:paddingStart="30dp"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:text="" />

    <Button
        android:id="@+id/done"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="229dp"
        android:layout_height="78dp"
        android:layout_marginStart="70dp"
        android:background="@color/colorAccent"
        android:text="@string/done"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />
</LinearLayout>